[gd_scene load_steps=3 format=3 uid="uid://d0px2w8n5r1lv"]

[ext_resource type="Script" uid="uid://eandsw8tdo6a" path="res://ui/seasonal/SeasonalCard_UI.gd" id="1_dvrso"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nweke"]
bg_color = Color(0.8235294, 0.7058824, 0.54901963, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.84313726, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="SeasonalCard_UI" type="PanelContainer"]
custom_minimum_size = Vector2(180, 300)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nweke")
script = ExtResource("1_dvrso")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Title "
horizontal_alignment = 1

[node name="IconRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "[Flavor Description]"

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "[Costs]"

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select"
